--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Global Reset */
+html{
+  scroll-behavior: smooth;
+}
 
 /* Base Body Styles */
 body {
@@ -13,6 +16,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
 
 /* Hide scrollbar but allow scrolling */
 .no-scrollbar::-webkit-scrollbar {
